frc/cert-manager/kubernetes/ingress-principal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-principal
  namespace: ingress-nginx
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: "test.luis122448.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-test-service
            port:
              number: 80
  tls:
  - hosts:
    - test.luis122448.com
    secretName: test-luis122448-com-tls
